# moduls

./: .env  generate_phone.py  generator_iterator.py  helper_find.txt  info.txt  pyproject.toml  readme.md  sphinx.txt  whats_learn.txt
abstract_class/: paymentSys.py  test.py
annotations/: callab.py
ci/: base.py  blog.py  test.db  testing.py  user.py
colorama_edit/: walk_color_dir.py  walk_dir.py
contextlib_edit/: exemples.ipynb  hello.txt  input.txt  real_python_ex.ipynb  simple_exemple.py
decorators/: check_time.py  check_time_call.py  check_time_reqursion.py  param_decotator.py  readme.md  redis_cashe.py  simple_decorator.py  time_logg.py  wrapped_decorator.py
docker_edit/: text.txt
docs/: conf.py  index.rst
edit_mult/: exemple.py  f1.py
exemple_pack/: main.py
extra_course_algo/: 1.ipynb  bigO.py  graf.py  linked_list_pro.py  linledlist.py  stack.py
git_learn_src/: READMY.md  info.txt
learn_fastapi/: pyproject.toml
learn_fastapi/annotation/: annotated_function_with_callabe.py  annotation_siple_data_structure.py  annotation_with_complex_data_structure.py  custom_types.py  task.py  task2.py
learn_fastapi/async_edit/: async_simple_exemple.py  synchronius_simple_exemple.py
learn_fastapi/fastapi_depends/: depends_with_argument.py  exemple_testing.py  simple_exemple.py
learn_fastapi/fastapi_tutorial/: body_request.py  env.txt  main.py
learn_fastapi/fastapi_tutorial/exemple/: alembic.ini  config.py  db.py  main.py  models.py  repo_contact.py  repo_user.py  rout_contact.py  rout_user.py  sheme.py
learn_fastapi/fastapi_tutorial/exemple/test_alemb/: env.py
learn_fastapi/fastapi_tutorial/exemple/test_alemb/versions/: 13f49575397e_create_table.py
learn_fastapi/generators/: infiniti_naturals.py  seconde_exemple.py  simple_exemple.py
learn_fastapi/pydantic_edit/: data_validation.py  file1.py  getting_dynamic_values.py  propertirs_as_pydantic_models.py  validation_with_custom_hooks.py
learn_test/: pyproject.toml
logger/: comand.py  education.py  main.ipynb  set_logger.py
read_file/: main.py
regular_exp/: re_match.py  re_search.py
skript/: file1.py  walk_dir.py
solid/: main.ipynb  readme.md
sql/: connect_sqlite.ipynb  join.sql  opetator_and_type_data.txt  (+2 more)
(+137 files in other folders)
