[tool.poetry]
name = "moduls"
version = "0.1.0"
description = ""
authors = ["dima cheban <dimacheban23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
faker = "^33.1.0"
phone-gen = "^3.0.9"
pydantic = "^2.10.3"
pytest-mock = "^3.14.0"
loguru = "^0.7.3"
numpy = "^2.2.1"
networkx = "^3.4.2"
matplotlib = "^3.10.0"
redis = "^5.2.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
